welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: Missing closing brace `}' assumed here
if (litMessage()== "A") {
^BDRBuggle:4: error: ';' expected but 'else' found.
else if (litMessage() == "B") {
^